# build_pluto_firmware

./: README.org  README_cross_comp_fedora.org  README_docs.org  README_popos.org  README_sdrangel.org  dmesg31  dmesg32  fw_printenv31  fw_printenv32  set.sh
capture/: README.org  gen00.lisp
capture/source/: copy_to_pluto.sh  globals.h  makefile  vis_00_base.cpp  vis_00_base.hpp  vis_01_server.cpp  vis_01_server.hpp  vis_02_filters.cpp  vis_02_filters.hpp  vis_02_tsqueue.hpp
capture2/: README.org  gen00.lisp
capture2/source/: CMakeLists.txt  globals.h  makefile  vis_00_base.cpp  vis_00_base.hpp  vis_01_server.cpp
capture_simulator/: gen00.lisp
capture_simulator/source/: globals.h  makefile  vis_00_base.cpp  vis_00_base.hpp  vis_01_server.cpp  vis_02_tsqueue.cpp
gl_osci/: README.org  gen00.lisp
gl_osci/source/: globals.h  makefile  vis_00_base.cpp  vis_00_base.hpp  vis_01_glfw_window.cpp  vis_01_glfw_window.hpp  vis_02_draw.cpp  vis_02_draw.hpp  vis_03_gui.cpp  vis_03_gui.hpp  vis_04_client.cpp  vis_04_client.hpp
pluto_tui/: README.org  gen00.lisp
pluto_tui/source/: globals.h  makefile  populate.sh  vis_00_base.cpp  vis_00_base.hpp
pluto_tui/source/libmems/: iio_channel_impl.cc  iio_context_impl.cc  iio_device.cc  iio_device_impl.cc  iio_device_trigger_impl.cc  test_fakes.cc
python/: gen00.lisp
python/source/: run_00_start.py
